prod_snapshot_2015-09-24_1030/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Curr_Adv__c</fullName>
        <label>Curr Adv</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupons/Specials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Deals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay-Per-Click</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Custom_Gift_Card_Value__c</fullName>
        <label>Custom Gift Card Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Website_Budget__c</fullName>
        <label>Custom Website Budget</label>
        <picklist>
            <picklistValues>
                <fullName>$5,000-$7,499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$7,500-$9,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000-19,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$20,000-49,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000-99,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Website_Description__c</fullName>
        <label>Custom Website Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customers_Competitors__c</fullName>
        <label>Customer&apos;s Competitors</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DB_Phone__c</fullName>
        <label>DB Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DC_Appointment_Setter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DC Appointment Setter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Appoint_Setters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DC_Description__c</fullName>
        <label>DC Description**</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DC_Discount__c</fullName>
        <label>DC Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DC_Sell_Price__c</fullName>
        <label>DC Sell Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DC_Total_Value__c</fullName>
        <label>DC Total Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMS_Install_Start_Date_Time__c</fullName>
        <label>DMS Install Start Date/Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNC__c</fullName>
        <formula>IF(Do_Not_Call__c=true, IMAGE(&quot;/img/msg_icons/error32.png&quot;, &quot;Do Not Call&quot;, 32, 32), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <label>DUNS #</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Employee_Count__c</fullName>
        <label>D&amp;B Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_SIC_Code__c</fullName>
        <label>D&amp;B SIC Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Sales_Volume__c</fullName>
        <label>D&amp;B Sales Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Alternate_Email_Captured__c</fullName>
        <description>Date Alternate Email Captured</description>
        <label>Date Alternate Email Captured</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Email_Captured__c</fullName>
        <description>System field used to record the Date an email was captured. Used for reporting.</description>
        <label>Date Email Captured</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Hook_Accepted__c</fullName>
        <label>Date Hook Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Inbound_Call_Source__c</fullName>
        <description>Date of the inbound call source being modified</description>
        <label>Date of Inbound Call Source</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_Of_Week__c</fullName>
        <formula>MOD( DATEVALUE(CreatedDate)  - DATE(2000,1,2),7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Of Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Stage__c</fullName>
        <formula>TODAY() - In_Stage_Since__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Description__c</fullName>
        <label>Other Notes/Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_of_the_Day_Capture_Date__c</fullName>
        <label>Deal of the Day Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Point_BarCode__c</fullName>
        <description>Delivery Point Bar Code</description>
        <label>Delivery Point BarCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Ran_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demo Ran By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads5_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo_Ran_DateTime__c</fullName>
        <label>Demo Ran DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demo_Ran__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Ran</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Set_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demo Set By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads6_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo_Set_DateTime__c</fullName>
        <label>Demo Set DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demo_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demographic_Score__c</fullName>
        <label>Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dial_Attempts__c</fullName>
        <label>Dial Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dig_Aud_Notify__c</fullName>
        <label>Dig Aud Notify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dig_Aud_PPC_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dig Aud PPC Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PPCSpecials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disqualification_Reason__c</fullName>
        <label>Lead Status Description</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Language barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest / Ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnected # / Bad Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursuing DM/In Dialogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNC / Remove From List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Duplicate USCP Record checkbox for Lead (equals true if there are two identical leads across the orgs) populated by Jitterbit</description>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Redistribute__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do Not Redistribute - Prevents This Lead From Being Transferred To The Open Acq Queue Owner.</inlineHelpText>
        <label>DNR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EC_Email_Budget__c</fullName>
        <label>EC Email Budget</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EC_Email_Quantity__c</fullName>
        <label>EC Email Quantity</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EC_Target_Demographic__c</fullName>
        <label>EC Target Demographic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Target_Geographics__c</fullName>
        <label>EC Target Geographics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECommerce_Website__c</fullName>
        <label>ECommerce Website</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EM_DM__c</fullName>
        <label>EM/DM</label>
        <picklist>
            <picklistValues>
                <fullName>DM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Activity__c</fullName>
        <label>Email Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Did Not Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opened and Clicked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Captured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden system field that is updated by a workflow rule/field update. Used for reporting.</description>
        <label>Email Captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Count_Request_Notes__c</fullName>
        <label>Email Count Request Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Count_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Count Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Website_Contribution__c</fullName>
        <label>Employee Website Contribution</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Status__c</fullName>
        <description>This field will be for the Staples Partner Program campaign. We need a field determining the status of a lead, so we know in HubSpot whether or not to contact them. The field will be used manually to set the status as &quot;Lead Gen Engaged&quot; or &quot;Sales Engaged&quot;. If either of those options are chosen, the lead will be sent to a HubSpot list that won&apos;t be sent reminder emails. If the field is blank, we are assuming the lead hasn&apos;t responded to the lead gen email with their report, and HubSpot will send them reminder emails.</description>
        <inlineHelpText>If &apos;Engaged&apos;, the automated drip reminders will be cancelled.</inlineHelpText>
        <label>Engagement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Gen Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Engaged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_Artwork_Format__c</fullName>
        <label>Existing Artwork Format</label>
        <picklist>
            <picklistValues>
                <fullName>Digital Format</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scan Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_Artwork__c</fullName>
        <label>Existing Artwork</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Prod_Mix__c</fullName>
        <inlineHelpText>What is the proposed or expected Product Mix For This Lead?</inlineHelpText>
        <label>Expected Prod Mix</label>
        <picklist>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Expected_Sale__c</fullName>
        <inlineHelpText>What is the proposed or expected Sales Value For This Lead?</inlineHelpText>
        <label>Expected Sale $</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Five9C2CCampaignName__c</fullName>
        <formula>&quot;Click-To-Call&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Five9C2CCampaignName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Former ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Former_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Former Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Franchise_Indicator__c</fullName>
        <label>Franchise Indicator</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Assist_Rep_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GO Assist Rep #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Assist_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GO Assist Rep #1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Audit_Parent_CaseId__c</fullName>
        <label>GO Audit Parent CaseId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gannett_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This company is a Gannett Customer- do not contact them</description>
        <label>Gannett Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gannett_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gannett Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gannett_Segment__c</fullName>
        <description>An internal industry description provided by Gannett Media Source.</description>
        <label>Gannett Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male &amp; Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geog_Serv_Area__c</fullName>
        <label>Geographical Service Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Ahwatukee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilbert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glendale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mesa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scottsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tempe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Goal_Brand_Awareness__c</fullName>
        <label>Goal - Brand Awareness</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Collect_Data_on_Visitors__c</fullName>
        <label>Goal - Collect Data on Visitors</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Communicate_Client_Case_Studies__c</fullName>
        <label>Goal - Communicate Client Case Studies</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Communicate_Contact_Info__c</fullName>
        <label>Goal - Communicate Contact Info</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Communicate_Offerings__c</fullName>
        <label>Goal - Communicate Offerings</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Communicate_Portfolio__c</fullName>
        <label>Goal - Communicate Portfolio</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Educate__c</fullName>
        <label>Goal - Educate</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Generate_Leads__c</fullName>
        <label>Goal - Generate Leads</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Other_Option__c</fullName>
        <label>Goal - Other Option</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Other__c</fullName>
        <label>Goal - Other</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>